// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error catch middleware async errors are handled only at the top level 1`] = `
Array [
  Array [
    [Error: error in bottomThunk],
  ],
]
`;

exports[`error catch middleware async errors are handled only at the top level 2`] = `
Array [
  "enter topThunk",
  "enter middleThunk",
  "enter bottomThunk",
]
`;

exports[`error catch middleware error in async nested thunk 1`] = `
Array [
  Array [
    [Error: asyncThunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware error in async thunk 1`] = `
Array [
  Array [
    [Error: asyncThunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware error in double nested async thunk 1`] = `
Array [
  Array [
    [Error: asyncThunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware error in double nested sync thunk 1`] = `
Array [
  Array [
    [Error: thunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware error in sync nested thunk 1`] = `
Array [
  Array [
    [Error: thunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware error in sync thunk 1`] = `
Array [
  Array [
    [Error: thunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware errors in an onError thunk do not recursively call the errorCatchMiddleware 1`] = `
Array [
  Array [
    [Error: asyncThunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware errors in an onError thunk do not recursively call the errorCatchMiddleware 2`] = `
Array [
  Array [
    [Function],
    [Function],
    undefined,
  ],
]
`;

exports[`error catch middleware nested async errors that are not awaited can be handled by using forceHandleError 1`] = `
Array [
  Array [
    [Error: I will be handled],
  ],
]
`;

exports[`error catch middleware onError can return a thunk function that will be dispatched 1`] = `
Array [
  Array [
    [Error: asyncThunkThatWillThrow],
  ],
]
`;

exports[`error catch middleware onError can return a thunk function that will be dispatched 2`] = `
Array [
  Array [
    [Function],
    [Function],
    undefined,
  ],
]
`;

exports[`error catch middleware sync errors are handled only at the top level 1`] = `
Array [
  Array [
    [Error: error in bottomThunk],
  ],
]
`;

exports[`error catch middleware sync errors are handled only at the top level 2`] = `
Array [
  "enter topThunk",
  "enter middleThunk",
  "enter bottomThunk",
]
`;
